kubernetes-cka/security/k8s-api-server-admissioncontroller.yml
apiVersion: v1
kind: Pod
metadata:
  name: kube-apiserver
spec:
  containers:
  - name: kube-apiserver
    command:
    - kube-apiserver
    - --enable-admission-plugins=NodeRestriction,PodSecurityPolicy,AlwaysPullImages
