kubernetes-cka/security/k8s-tokenprojectedpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: token-projected-pod
spec:
  containers:
  - name: app
    image: myapp:1.0
    volumeMounts:
    - name: token
      mountPath: /var/run/secrets/tokens
  volumes:
  - name: token
    projected:
      sources:
      - serviceAccountToken:
          path: token
          expirationSeconds: 3600
          audience: api
