kubernetes-cka/security/k8s-networkpolicy-quarantine.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quarantine
spec:
  podSelector:
    matchLabels:
      security.kubernetes.io/quarantine: 'true'
  policyTypes:
  - Ingress
  - Egress
