kubernetes-cka/security/k8s-allowedrepos.yml
# Using OPA Gatekeeper
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: require-trusted-repos
spec:
  match:
    kinds:
    - apiGroups: [ '' ]
      kinds: [ 'Pod' ]
  parameters:
    repos:
    - 'registry.example.com/'
    - 'docker.io/bitnami/'
